--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@getutil/util",
+  "name": "@a-util/util",
   "files": [
-    "lib/"
+    "*/*"
   ],
   "main": "lib/main.js",
   "module": "lib/main.es.js",
   "umd": "dist/main.js",
   "types": "lib/index.d.ts",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
